@@ -36,7 +36,6 @@ man
 html/man
 html/libhelp
 html/3dmodHelp/plughelp
-html/plughelp
 html/IMOD.qhp
 html/IMOD.qch
 html/IMOD.qhc
