@@ -6,6 +6,8 @@ comparam.eraser.ccderaser.DiffCriterion=6.0
 comparam.track.beadtrack.SobelFilterCentering=1
 comparam.track.beadtrack.KernelSigmaForSobel=1.5
 comparam.xcorr_pt.tiltxcorr.SizeOfPatchesXandY=680,680
+comparam.xcorr_pt.tiltxcorr.FilterRadius2=0.125
+comparam.xcorr_pt.tiltxcorr.FilterSigma2=0.03
 comparam.align.tiltalign.SurfacesToAnalyze=1
 runtime.Positioning.any.wholeTomogram=1
 comparam.golderaser.ccderaser.ExpandCircleIterations = 3
